--- a/utils/build
+++ b/utils/build
@@ -6,5 +6,38 @@ then
 fi
 
 code_file=`pwd`"/asm/"$1".txt"
-mem_file=`pwd`"/memory/"$1".mem"
+mem_dir=`pwd`"/memory/"
 do_file=$(mktemp /tmp/$1.do)
+
+javac Assembler.java
+java  Assembler $code_file $mem_dir
+
+echo "# Create library
+vlib work
+
+
+# Compile and load
+vcom vhdl/packages/*.vhd  
+vcom vhdl/components/*.vhd 
+vcom vhdl/modules/*.vhd 
+vhdl/system.vhd
+vsim work.system
+
+
+# Open View windows
+view structure
+view signals
+view wave
+
+
+# Changing wave view to hexdec
+property wave -radix hexadecimal /system/*
+
+
+# Initialize ram memory
+mem load -i "$mem_file".mem /system/ram_component/ram_memory
+
+
+# Run
+run 10000" >> $do_file
+
